@@ -45,3 +45,4 @@ Caffaratti Fabrizio <Fabrizio.Caffaratti@TILAB.COM>
 Moritz Bunkus <moritz@bunkus.org>
 Mark Kaplun <markk5@bezeqint.net>
 Nick Thomson <nick-smi@undergrid.org.uk>
+C. M. Heard <heard@pobox.com>
